--- a/porto/porto.html
+++ b/porto/porto.html
@@ -20,7 +20,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark hadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="../index.html">Farraz Lutfhai Nugraha</a>
+        <a class="navbar-brand" href="../index.html">Farraz Lutfhi Nugraha</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,7 +47,7 @@
     <!-- jumbotron -->
     <section class="jumbotron text-center">
       <img src="img2/IMG_20220420_195633_510.jpg" alt="farraz" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4" style="color: #ffffff">Farraz Lutfhai Nugraha</h1>
+      <h1 class="display-4" style="color: #ffffff">Farraz Lutfhi Nugraha</h1>
       <p class="lead" style="color: #ffffff">PELAJAR | SMK SAMUDRA</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -69,7 +69,7 @@
         </div>
         <div class="row mb-4 justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Halo Nama saya Farraz Lutfhai Nugraha, Saya seorang pelajar di SMK Samudra Cislok, Saya tinggal di Cikakak Kp.Kurnia RT01/06</p>
+            <p>Halo Nama saya Farraz Lutfhai Nugraha, Saya seorang pelajar di SMK Samudra Cisolok, Saya tinggal di Cikakak Kp.Kurnia RT01/06</p>
           </div>
           <div class="col-md-4">
             <p>Cita-cita Saya ingin menjadi Orang yang sukses dan ingin berguna bagi Keluaga dan Negara dan tujuan Saya membuat Portofolio ini haya untuk mengisi waktu luang Saya saat di Rumah</p>
