--- a/porto/porto.html
+++ b/porto/porto.html
@@ -69,7 +69,7 @@
         </div>
         <div class="row mb-4 justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Halo Nama saya Farraz Lutfhai Nugraha, Saya seorang pelajar di SMK Samudra Cisolok, Saya tinggal di Cikakak Kp.Kurnia RT01/06</p>
+            <p>Halo Nama saya Farraz Lutfhi Nugraha, Saya seorang pelajar di SMK Samudra Cisolok, Saya tinggal di Cikakak Kp.Kurnia RT01/06</p>
           </div>
           <div class="col-md-4">
             <p>Cita-cita Saya ingin menjadi Orang yang sukses dan ingin berguna bagi Keluaga dan Negara dan tujuan Saya membuat Portofolio ini haya untuk mengisi waktu luang Saya saat di Rumah</p>
